@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <T3locallang>
 	<meta type="array">
-		<description>Labels for the linkvalidator task.</description>
+		<description>Labels for the Linkvalidator Task.</description>
 		<type>module</type>
 		<csh_table></csh_table>
 		<labelContext type="array">
@@ -11,21 +11,21 @@
 		<languageKey index="default" type="array">
 			<label index="mod_linkvalidator">Linkvalidator</label>
 			<label index="tasks.validate.name">Linkvalidator</label>
-			<label index="tasks.validate.description">Search for broken links and store the result into the temporary table tx_linkvalidator_link in order to ease up the backend module.</label>
-			<label index="tasks.validate.page">Start page (uid)</label>
+			<label index="tasks.validate.description">Search for broken Links and store the Result into the temporary Table tx_linkvalidator_link in order to ease up the Backend Module.</label>
+			<label index="tasks.validate.page">Start Page (uid)</label>
 			<label index="tasks.validate.depth">Depth</label>
 			<label index="tasks.validate.conf">Overwrite TSconfig</label>
-			<label index="tasks.validate.email">Send email report to</label>
-			<label index="tasks.validate.emailOnBrokenLinkOnly">Send email on new broken links only</label>
-			<label index="tasks.validate.emailTemplateFile">Email template file</label>
-			<label index="tasks.validate.invalidEmail">Invalid email format!</label>
-			<label index="tasks.validate.invalidPage">Invalid page uid, please enter a valid page uid!</label>
-			<label index="tasks.validate.invalidDepth">There is no depth set, please set it to one of the offered values!</label>
-			<label index="tasks.error.noSubject">No subject for the notification email</label>
-			<label index="tasks.error.invalidToEmail">Invalid format of one or more of the recipient email addresses!</label>
-			<label index="tasks.error.invalidFromEmail">Invalid format of the email address in the from header</label>
-			<label index="tasks.error.invalidTSconfig">Invalid TSconfig in the task configuration!</label>
-			<label index="tasks.error.invalidEmailTemplateFile">The email template file is not existing!</label>
+			<label index="tasks.validate.email">Send Email Report to</label>
+			<label index="tasks.validate.emailOnBrokenLinkOnly">Send Email on new broken Links only</label>
+			<label index="tasks.validate.emailTemplateFile">Email Template File</label>
+			<label index="tasks.validate.invalidEmail">Invalid Email Format!</label>
+			<label index="tasks.validate.invalidPage">Invalid Page uid, please enter a valid Page uid!</label>
+			<label index="tasks.validate.invalidDepth">There is no Depth set, please set it to one of the Values offered!</label>
+			<label index="tasks.error.noSubject">No Subject for the Notification Email</label>
+			<label index="tasks.error.invalidToEmail">Invalid Format of one or more of the Recipient Email Addresses!</label>
+			<label index="tasks.error.invalidFromEmail">Invalid Format of the Email Address in the From Header</label>
+			<label index="tasks.error.invalidTSconfig">Invalid TSconfig in the Task Configuration!</label>
+			<label index="tasks.error.invalidEmailTemplateFile">The Email Template File is not existing!</label>
 		</languageKey>
 	</data>
 </T3locallang>
