@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <T3locallang>
 	<meta type="array">
-		<description>Labels for the linkvalidator Backend module.</description>
+		<description>Labels for the Linkvalidator Backend Module.</description>
 		<type>module</type>
 		<csh_table></csh_table>
 		<labelContext type="array">
@@ -10,66 +10,66 @@
 	<data type="array">
 		<languageKey index="default" type="array">
 			<label index="menu.introduction">Introduction</label>
-			<label index="menu.checkLinks">Check Links for validity</label>
-			<label index="menu.overview">Overview of links on website</label>
-			<label index="overview.header">Overview - choose options to check the links</label>
-			<label index="overview.all.header">Total amounts in tt_content</label>
-			<label index="overview.all.records">Records with ext. links:</label>
-			<label index="overview.all.links">External links:</label>
-			<label index="overview.branch.header">Amounts from actual branch in tt_content</label>
-			<label index="overview.branch.records">Records with ext. links:</label>
-			<label index="overview.branch.links">External links:</label>
+			<label index="menu.checkLinks">Check Links for Validity</label>
+			<label index="menu.overview">Overview of Links on Website</label>
+			<label index="overview.header">Overview - Choose Options to check the Links</label>
+			<label index="overview.all.header">Total Amounts in tt_content</label>
+			<label index="overview.all.records">Records with ext. Links:</label>
+			<label index="overview.all.links">External Links:</label>
+			<label index="overview.branch.header">Amounts from actual Branch in tt_content</label>
+			<label index="overview.branch.records">Records with ext. Links:</label>
+			<label index="overview.branch.links">External Links:</label>
 			<label index="overview.attention.header">Attention:</label>
-			<label index="overview.attention.text">Checking links may take up to several minutes. Checking ONE link can last up to 3 seconds.</label>
+			<label index="overview.attention.text">Checking Links may take up to several Minutes. Checking ONE Link can last up to 3 Seconds.</label>
 			<label index="Report">Report</label>
 			<label index="CheckLink">Check Links</label>
-			<label index="report.statistics.header">Show these types of broken links</label>
-			<label index="checklinks.statistics.header">Check these types of broken links</label>
-			<label index="report.func.title">Show this level</label>
-			<label index="checklinks.func.title">Check this level</label>
-			<label index="overviews.nbtotal">Broken links total:</label>
+			<label index="report.statistics.header">Show these Types of broken Links</label>
+			<label index="checklinks.statistics.header">Check these Types of broken Links</label>
+			<label index="report.func.title">Show this Level</label>
+			<label index="checklinks.func.title">Check this Level</label>
+			<label index="overviews.nbtotal">Broken Links Total:</label>
 			<label index="hooks.db">Internal Links:</label>
 			<label index="hooks.file">File Links:</label>
 			<label index="hooks.external">External Links:</label>
 			<label index="hooks.linkhandler">Linkhandler Links:</label>
-			<label index="label_refresh">Refresh display</label>
-			<label index="label_update">Check links</label>
-			<label index="list.header">Listing of broken links</label>
+			<label index="label_refresh">Refresh Display</label>
+			<label index="label_update">Check Links</label>
+			<label index="list.header">Listing of broken Links</label>
 			<label index="list.tableHead.path">Path</label>
 			<label index="list.tableHead.element">Element</label>
 			<label index="list.tableHead.headlink">Link</label>
 			<label index="list.tableHead.linktarget">URL / Link Target</label>
-			<label index="list.tableHead.linkmessage">Error message</label>
-			<label index="list.tableHead.lastCheck">Last check</label>
-			<label index="list.edit">Edit element containing this broken link</label>
+			<label index="list.tableHead.linkmessage">Error Message</label>
+			<label index="list.tableHead.lastCheck">Last Check</label>
+			<label index="list.edit">Edit Element containing this broken Link</label>
 			<label index="list.field">(Field: %s)</label>
-			<label index="list.no.headline">no headline</label>
+			<label index="list.no.headline">no Headline</label>
 			<label index="list.report.pagedeleted">Page '###title###' (###uid###) is deleted.</label>
 			<label index="list.report.pagenotvisible">Page '###title###' (###uid###) is not visible.</label>
 			<label index="list.report.pagenotexisting">Page (###uid###) does not exist.</label>
-			<label index="list.report.contentmoved">Element '###title###' (###uid###) is not located on page ###wrongpage###, but on page ###rightpage###.</label>
+			<label index="list.report.contentmoved">Element '###title###' (###uid###) is not located on Page ###wrongpage###, but on Page ###rightpage###.</label>
 			<label index="list.report.contentdeleted">Element '###title###' (###uid###) is deleted.</label>
 			<label index="list.report.contentnotvisible">Element '###title###' (###uid###) is not visible.</label>
 			<label index="list.report.contentnotexisting">Element (###uid###) does not exist.</label>
-			<label index="list.report.rowdeleted">###title### row (###uid###) is deleted.</label>
+			<label index="list.report.rowdeleted">###title### Row (###uid###) is deleted.</label>
 			<label index="list.report.rowdeleted.default.title">Linked</label>
 			<label index="list.report.rownotexisting">Row (###uid###) does not exist.</label>
 			<label index="list.report.noresponse">External Link not reachable.</label>
-			<label index="list.report.redirectloop">A redirect loop occurred. (%s: %s)</label>
-			<label index="list.report.pageforbidden403">Accessing this address is not allowed (403).</label>
-			<label index="list.report.pagenotfound404">The requested url was not found (404).</label>
-			<label index="list.report.externalerror">External Link returned HTTP error code (%s).</label>
-			<label index="list.report.filenotexisting">File doesn't exist.</label>
-			<label index="list.report.timeout">Operation timeout. The specified time-out period was reached according to the conditions.</label>
+			<label index="list.report.redirectloop">A Redirect Loop occurred. (%s: %s)</label>
+			<label index="list.report.pageforbidden403">Accessing this Address is not allowed (403).</label>
+			<label index="list.report.pagenotfound404">The requested URL was not found (404).</label>
+			<label index="list.report.externalerror">External Link returned HTTP Error Code (%s).</label>
+			<label index="list.report.filenotexisting">File does not exist.</label>
+			<label index="list.report.timeout">Operation Timeout. The specified Time-Out Period was reached according to the Conditions.</label>
 			<label index="list.report.internalerror500">Internal Server Error (500)</label>
-			<label index="list.report.couldnotresolvehost">Could not resolve host. The given remote host was not resolved.</label>
-			<label index="list.report.errornetworkdata">Failure with receiving network data.</label>
+			<label index="list.report.couldnotresolvehost">Could not resolve Host. The given Remote Host was not resolved.</label>
+			<label index="list.report.errornetworkdata">Failure with receiving Network Data.</label>
 			<label index="list.msg.ok">Ok</label>
 			<label index="list.msg.lastRun">%1$s %2$s</label>
-			<label index="list.no.broken.links.title">No broken links to show!</label>
-			<label index="list.no.broken.links">There are no broken links to be displayed.</label>
-			<label index="no.access.title">No access!</label>
-			<label index="no.access">You do not have access to these listings.</label>
+			<label index="list.no.broken.links.title">No broken Links to show!</label>
+			<label index="list.no.broken.links">There are no broken Links to be displayed.</label>
+			<label index="no.access.title">No Access!</label>
+			<label index="no.access">You do not have Access to these Listings.</label>
 		</languageKey>
 	</data>
 </T3locallang>
