@@ -1,6 +1,7 @@
 2011-02-06  Christopher Stelmaszyk  <chrissitopher@gmx.de>
 
 	* Fixed bug #12517: Replace exec_SELECTgetRows with exec_SELECTgetSingleRow whenever a single record is expected (thanks to Jo Hasenau)
+	* Fixed bug #12549: Unify capitalization of language labels
 
 2011-01-26  Christopher Stelmaszyk  <chrissitopher@gmx.de>
 
